--- a/timesheet/templates/time_sheet.html
+++ b/timesheet/templates/time_sheet.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1 class="mt-4">Time Sheet Entries</h1>
-    <form method="POST" class="mt-4">
+    <form method="POST" class="needs-validation" novalidate>
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Add Time Sheet Entry</button>
