--- a/timesheet/templates/time_sheet.html
+++ b/timesheet/templates/time_sheet.html
@@ -7,6 +7,9 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Add Time Sheet Entry</button>
+        <div class="invalid-feedback">
+            Please correct the errors above.
+        </div>
     </form>
     <hr>
     <h2>Existing Time Sheet Entries</h2>
